--- a/DW.CodedUI/DW.CodedUI.csproj
+++ b/DW.CodedUI/DW.CodedUI.csproj
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D0C60D0D-7CD0-422E-B0A5-5031602FB73A}</ProjectGuid>
+    <ProjectGuid>{AE8A6C77-5D3F-414C-B484-F8B44706AA70}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DW.CodedUI</RootNamespace>
@@ -14,11 +14,6 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
-    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
-    <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
-    <IsCodedUITest>False</IsCodedUITest>
-    <TestProjectType>CodedUITest</TestProjectType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,10 +28,9 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin\</OutputPath>
-    <DefineConstants>TRACE;NOTRIAL</DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\bin\DW.CodedUI.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -45,24 +39,24 @@
     <AssemblyOriginatorKeyFile>my-libraries.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualStudio.QualityTools.CodedUITestFramework, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.VisualStudio.QualityTools.CodedUITestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.VisualStudio.TestTools.UITest.Common, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.VisualStudio.TestTools.UITest.Extension, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.VisualStudio.TestTools.UITesting, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="UiaComWrapper, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.VisualStudio.TestTools.UITest.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.VisualStudio.TestTools.UITest.Extension, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.VisualStudio.TestTools.UITesting, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.XML" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="UIAutomationClient" />
+    <Reference Include="UIAutomationTypes" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -71,37 +65,26 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <None Include="my-libraries.pfx" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
     <Compile Include="And.cs" />
     <Compile Include="AndCondition.cs" />
+    <Compile Include="At.cs" />
     <Compile Include="BasicElementExtensions.cs" />
+    <Compile Include="BasicElements\AutomationElementInfo.cs" />
     <Compile Include="BasicElements\BasicBrowseFolderDialog.cs" />
-    <Compile Include="BasicElements\BasicColorPickerDialog.cs" />
-    <Compile Include="BasicElements\BasicFontPickerDialog.cs" />
-    <Compile Include="BasicElements\BasicSaveFileDialog.cs" />
-    <Compile Include="BasicElements\BasicDialog.cs" />
-    <Compile Include="BasicElements\BasicWindowBase.cs" />
-    <Compile Include="CombinableAnd.cs" />
-    <Compile Include="CombinableDo.cs" />
-    <Compile Include="CombinableUse.cs" />
-    <Compile Include="CompareKind.cs" />
-    <Compile Include="Do.cs" />
-    <Compile Include="ElementsContainer.cs" />
-    <Compile Include="ExecutableNotAvailableException.cs" />
-    <Compile Include="Internal\License.xaml.cs">
-      <DependentUpon>License.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Internal\StringExtensions.cs" />
-    <Compile Include="Internal\SystemStrings.cs" />
-    <Compile Include="MissingWindowException.cs" />
-    <Compile Include="Properties\CommonMeta.cs" />
     <Compile Include="BasicElements\BasicButton.cs" />
     <Compile Include="BasicElements\BasicCheckBox.cs" />
+    <Compile Include="BasicElements\BasicColorPickerDialog.cs" />
     <Compile Include="BasicElements\BasicComboBox.cs" />
     <Compile Include="BasicElements\BasicComboBoxItem.cs" />
+    <Compile Include="BasicElements\BasicDialog.cs" />
     <Compile Include="BasicElements\BasicEdit.cs" />
     <Compile Include="BasicElements\BasicElement.cs" />
-    <Compile Include="BasicElements\AutomationElementInfo.cs" />
     <Compile Include="BasicElements\BasicExpander.cs" />
+    <Compile Include="BasicElements\BasicFontPickerDialog.cs" />
     <Compile Include="BasicElements\BasicList.cs" />
     <Compile Include="BasicElements\BasicListItem.cs" />
     <Compile Include="BasicElements\BasicMenu.cs" />
@@ -109,6 +92,7 @@
     <Compile Include="BasicElements\BasicMessageBox.cs" />
     <Compile Include="BasicElements\BasicOpenFileDialog.cs" />
     <Compile Include="BasicElements\BasicRadioButton.cs" />
+    <Compile Include="BasicElements\BasicSaveFileDialog.cs" />
     <Compile Include="BasicElements\BasicTabControl.cs" />
     <Compile Include="BasicElements\BasicTabItem.cs" />
     <Compile Include="BasicElements\BasicText.cs" />
@@ -116,29 +100,43 @@
     <Compile Include="BasicElements\BasicTreeView.cs" />
     <Compile Include="BasicElements\BasicTreeViewItem.cs" />
     <Compile Include="BasicElements\BasicWindow.cs" />
-    <Compile Include="At.cs" />
+    <Compile Include="BasicElements\BasicWindowBase.cs" />
+    <Compile Include="By.cs" />
+    <Compile Include="CombinableAnd.cs" />
+    <Compile Include="CombinableBy.cs" />
+    <Compile Include="CombinableDo.cs" />
+    <Compile Include="CombinableUse.cs" />
+    <Compile Include="CombinableWith.cs" />
+    <Compile Include="CompareKind.cs" />
+    <Compile Include="Do.cs" />
+    <Compile Include="ElementsContainer.cs" />
+    <Compile Include="ExecutableNotAvailableException.cs" />
+    <Compile Include="From.cs" />
+    <Compile Include="Internal\License.xaml.cs">
+      <DependentUpon>License.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Internal\StringExtensions.cs" />
+    <Compile Include="Internal\SystemStrings.cs" />
+    <Compile Include="Internal\WinApi.cs" />
     <Compile Include="KeyboardCommands.cs" />
     <Compile Include="KeyboardEx.cs" />
+    <Compile Include="MissingWindowException.cs" />
     <Compile Include="MouseEx.cs" />
-    <Compile Include="Internal\WinApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="By.cs" />
-    <Compile Include="CombinableBy.cs" />
-    <Compile Include="CombinableWith.cs" />
-    <Compile Include="From.cs" />
+    <Compile Include="Properties\CommonMeta.cs" />
     <Compile Include="UI.cs" />
     <Compile Include="UIElementNotFoundException.cs" />
     <Compile Include="Use.cs" />
-    <Compile Include="WindowFinder.cs" />
-    <Compile Include="WindowNotFoundException.cs" />
-    <Compile Include="WindowState.cs" />
-    <Compile Include="With.cs" />
-    <Compile Include="WithCondition.cs" />
     <Compile Include="Utilities\ColorDetector.cs" />
     <Compile Include="Utilities\Highlighter.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Utilities\WindowFocus.cs" />
+    <Compile Include="WindowFinder.cs" />
+    <Compile Include="WindowNotFoundException.cs" />
+    <Compile Include="WindowState.cs" />
+    <Compile Include="With.cs" />
+    <Compile Include="WithCondition.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Internal\License.xaml">
@@ -149,10 +147,6 @@
   <ItemGroup>
     <Content Include="Internal\Logo.PNG" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="my-libraries.pfx" />
-  </ItemGroup>
-  <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
