--- a/ElementFinder/Properties/Settings.settings
+++ b/ElementFinder/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="TopMost" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="LeftColumnWidth" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">50</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
