--- a/ElementFinder/app.config
+++ b/ElementFinder/app.config
@@ -34,6 +34,9 @@
             <setting name="TopMost" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="LeftColumnWidth" serializeAs="String">
+                <value>50</value>
+            </setting>
         </ElementFinder.Properties.Settings>
     </userSettings>
 </configuration>
